--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <html>
 <head>
-	<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
 <body>
     <div id="layout" class="stars">
-  <h2>Welcome to <"insert something"></h2>
-  <button onclick = "Countries('Country');">Countries</button>
-  <div class="stars"></div>
-<div class="twinkling"></div>
-<div class="clouds"></div>
+
+    <div class = "message">
+      <p class = "item-1">"The environment will continue  </br> to deteriorate until pollution</br> practices are abandoned."</br>~ B. F. Skinner</p>
+     <p class = "item-2">“Progress is impossible without change, </br> and those who cannot change their minds </br> cannot change anything.”</br>~ George Bernard Shaw</p>
+     <p class = "item-3">"Sooner or later, we will have to recognise </br> that the Earth has rights, too, </br>to live without pollution. </br> What mankind must know is </br> that human beings </br> cannot live without Mother Earth,</br> but the planet can live </br> without humans." </br> ~ Evo Morales</p>
+    </div>
+
+ <div class = "containerT">
+    <h1 style = "font-family:georgia,garamond,serif;">SAVE THE EARTH</h1>
+    <h2></h2>
+    <h3 style = "font-family:georgia,garamond,serif;">THE ENVIRONMENT</h3>
+  </div>
+
+ 
+
+    <div class="stars"></div>
+  <div class="twinkling"></div>
+  <div class="clouds"></div>
 
   <div id="ShootingStarParams"></div>
-  	<div class="canvas">
-  <div class="earth">
+    <div class="canvas">
+    <div class="earth">
     <div class="land-big na">
       <div class="land l-1"></div>
       <div class="land-join"></div>
@@ -23,6 +38,8 @@
       <div class="land-join"></div>
       <div class="land l-2"></div>
     </div>
+
+
     <div class="land-big ce">
       <div class="land l-1"></div>
       <div class="land-join"></div>
@@ -64,9 +81,23 @@
     </div>
   </div>
 </div>
-
-	</div>
-
+<div class="container"> 
+  <!-- Example row of columns -->
+  
+  <div class="row">
+    <div class="col-md-12 text-center">
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="evidence.html"
+      class="btn btn-sm animated-button victoria-one">     Evidence     </a> </div>
+    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-two">Cause</a> </div>
+    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-four">Solution</a> </div>
+  </div>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
+
