--- a/evidence.html
+++ b/evidence.html
@@ -5,12 +5,23 @@
 	</head>
 	<body>
 
+		<h1 style = "font-family:times new roman,times,serif;">EVIDENCE</h1>
+		
+		<div id="mySidenav" class="sidenav">
+  		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  		<a href="index.html">Home</a>
+  		<a href="#">Cause</a>
+  		<a href="#">Solution</a>
+		</div>
+
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
 		<div class="video-section">
           <div class= "container">
               <iframe src="https://www.youtube.com/embed/6iWTiYlOxMs" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen margin:"100" controls autoplay></iframe>
           </div>
         </div>
-		
+
 		<h1></h1>
 	</body>
 </html>
