--- a/evidence.html
+++ b/evidence.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styleE.css">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://fonts.google.com/">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 
@@ -10,18 +13,72 @@
 		<div id="mySidenav" class="sidenav">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   		<a href="index.html">Home</a>
-  		<a href="#">Cause</a>
+  		<a href="#">Causes</a>
   		<a href="#">Solution</a>
 		</div>
 
+		<div class="w3-animate-fading">
+  		<h2 style = "font-family:times new roman,times,serif;"></h2>
+		</div>
+
 		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+		
+		
+        <div class = "box-container">
+        	<div class = "box-1">
+        		<h3 style = "font-family:times new roman,times,serif;">The effects of anthropogenic – human-caused – climate change range from more frequent and severe droughts to snowstorms and extreme winter weather in temperate regions as a result of warming Arctic weather fronts.</br>
 
-		<div class="video-section">
-          <div class= "container">
-              <iframe src="https://www.youtube.com/embed/6iWTiYlOxMs" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen margin:"100" controls autoplay></iframe>
-          </div>
+				</br>It's not only humans that are affected. Warming ocean temperatures are increasing the frequency of coral reef bleaching; warmer, drier weather means that forests in some regions are no longer recovering from wildfires and wildlife habitats around the world are becoming less hospitable to animals.</br>
+
+				</br>Climate change is having economic and socio-political effects, too. Food security is already being impacted in a number of African countries and researchers are studying suggestive links between climate change and an increased likelihood of military conflict.
+
+				The evidence for rapid climate change is compelling:</br>
+	
+				</br>Global temperature rise</br>
+	
+				</br>The planet's average surface temperature has risen about 2.0 degrees Fahrenheit (1.1 degrees Celsius) since the late 19th century, a change driven largely by increased carbon dioxide and other human-made emissions into the atmosphere.4 Most of the warming occurred in the past 35 years, with the five warmest years on record taking place since 2010. </br>
+				</br>Not only was 2016 the warmest year on record, but eight of the 12 months that make up the year — from January through September, with the exception of June — were the warmest on record for those respective months.</br> 
+	
+				</br>Warming oceans</br>
+
+				</br>The oceans have absorbed much of this increased heat, with the top 700 meters (about 2,300 feet) of ocean showing warming of more than 0.4 degrees Fahrenheit since 1969.</br>
+
+				</br>Shrinking ice sheets</br>
+
+				</br>The Greenland and Antarctic ice sheets have decreased in mass. Data from NASA's Gravity Recovery and Climate Experiment show Greenland lost an average of 286 billion tons of ice per year between 1993 and 2016, while Antarctica lost about 127 billion tons of ice per year during the same time period. The rate of Antarctica ice mass loss has tripled in the last decade.</br>
+
+				</br>Glacial retreat</br>
+
+				</br>Glaciers are retreating almost everywhere around the world — including in the Alps, Himalayas, Andes, Rockies, Alaska and Africa.</br>
+
+				</br>Decreased snow cover</br>
+
+				</br>Satellite observations reveal that the amount of spring snow cover in the Northern Hemisphere has decreased over the past five decades and that the snow is melting earlier</br>
+
+				</br>Sea level rise</br>
+
+				</br>Global sea level rose about 8 inches in the last century. The rate in the last two decades, however, is nearly double that of the last century and is accelerating slightly every year.</br>
+
+				</br>Declining Arctic sea ice</br>
+
+				</br>Both the extent and thickness of Arctic sea ice has declined rapidly over the last several decades</br>
+
+				</br>Extreme events</br>
+
+				</br>Glaciers are retreating almost everywhere around the world — including in the Alps, Himalayas, Andes, Rockies, Alaska and Africa.</br>
+				</br>The number of record high temperature events in the United States has been increasing, while the number of record low temperature events has been decreasing, since 1950. The U.S. has also witnessed increasing numbers of intense rainfall events.</br>
+
+				</br>Ocean acidification</br>
+
+				</br>Since the beginning of the Industrial Revolution, the acidity of surface ocean waters has increased by about 30 percent.13,14 </br>
+				</br>This increase is the result of humans emitting more carbon dioxide into the atmosphere and hence more being absorbed into the oceans. The amount of carbon dioxide absorbed by the upper layer of the oceans is increasing by about 2 billion tons per year.</br>
+
+				</h3>      	
         </div>
+		
+		
 
-		<h1></h1>
+		<script src="scriptE.js"></script>
+
 	</body>
 </html>
