Evidence Fix Video

--- a/evidence.html
+++ b/evidence.html
@@ -76,7 +76,11 @@
 				</h3>      	
         </div>
 		
-		
+		<div class="video-section">
+          <div class= "container">
+              <iframe src="https://www.youtube.com/embed/6iWTiYlOxMs" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen margin:"100" controls autoplay></iframe>
+          </div>
+        </div>
 
 		<script src="scriptE.js"></script>
 
