--- a/cause.html
+++ b/cause.html
@@ -13,8 +13,8 @@
 		<div id="mySidenav" class="sidenav">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   		<a href="index.html">Home</a>
-  		<a href="#">Evidence</a>
-  		<a href="#">Solution</a>
+  		<a href="evidence.html">Evidence</a>
+  		<a href="solution.html">Solution</a>
 		</div>
 
 		<div class="w3-animate-fading">
@@ -27,7 +27,52 @@
         <div class = "box-container">
         	<div class = "box-1">
         		<h3 style = "font-family:times new roman,times,serif;">
+        			</br>Most climate scientists agree the main cause of the current global warming trend is human expansion of the "greenhouse effect"1 — warming that results when the atmosphere traps heat radiating from Earth toward space.</br>
 
+					</br>Certain gases in the atmosphere block heat from escaping. Long-lived gases that remain semi-permanently in the atmosphere and do not respond physically or chemically to changes in temperature are described as "forcing" climate change. Gases, such as water vapor, which respond physically or chemically to changes in temperature are seen as "feedbacks."</br>
+
+					</br>Gases that contribute to the greenhouse effect include:</br>
+
+					</br>Water vapor</br>
+
+					</br>The most abundant greenhouse gas, but importantly, it acts as a feedback to the climate. Water vapor increases as the Earth's atmosphere warms, but so does the possibility of clouds and precipitation, making these some of the most important feedback mechanisms to the greenhouse effect.</br>
+
+					</br>Carbon dioxide (CO2)</br>
+
+					</br>A minor but very important component of the atmosphere, carbon dioxide is released through natural processes such as respiration and volcano eruptions and through human activities such as deforestation, land use changes, and burning fossil fuels. Humans have increased atmospheric CO2 concentration by more than a third since the Industrial Revolution began. This is the most important long-lived "forcing" of climate change.</br>
+
+					</br>Methane</br>
+
+					</br>A hydrocarbon gas produced both through natural sources and human activities, including the decomposition of wastes in landfills, agriculture, and especially rice cultivation, as well as ruminant digestion and manure management associated with domestic livestock. On a molecule-for-molecule basis, methane is a far more active greenhouse gas than carbon dioxide, but also one which is much less abundant in the atmosphere.</br>
+
+					</br>Nitrous oxide</br>
+
+					</br>A powerful greenhouse gas produced by soil cultivation practices, especially the use of commercial and organic fertilizers, fossil fuel combustion, nitric acid production, and biomass burning.</br>
+
+					</br>Chlorofluorocarbons (CFCs)</br>
+
+					</br>Synthetic compounds entirely of industrial origin used in a number of applications, but now largely regulated in production and release to the atmosphere by international agreement for their ability to contribute to destruction of the ozone layer. They are also greenhouse gases.</br>
+
+					</br>The consequences of changing the natural atmospheric greenhouse are difficult to predict, but certain effects seem likely:</br>
+
+					</br>On average, Earth will become warmer. Some regions may welcome warmer temperatures, but others may not.</br>
+					
+					</br>Warmer conditions will probably lead to more evaporation and precipitation overall, but individual regions will vary, some becoming wetter and others dryer.</br>
+
+					</br>A stronger greenhouse effect will warm the oceans and partially melt glaciers and other ice, increasing sea level. Ocean water also will expand if it warms, contributing further to sea level rise.</br>
+
+					</br>Meanwhile, some crops and other plants may respond favorably to increased atmospheric CO2, growing more vigorously and using water more efficiently. At the same time, higher temperatures and shifting climate patterns may change the areas where crops grow best and affect the makeup of natural plant communities.</br>
+
+
+					</br>Too much greenhouse effect: The atmosphere of Venus, like Mars, is nearly all carbon dioxide. But Venus has about 154,000 times as much carbon dioxide in its atmosphere as Earth (and about 19,000 times as much as Mars does), producing a runaway greenhouse effect and a surface temperature hot enough to melt lead.</br>
+
+					</br>On Earth, human activities are changing the natural greenhouse. Over the last century the burning of fossil fuels like coal and oil has increased the concentration of atmospheric carbon dioxide (CO2). This happens because the coal or oil burning process combines carbon with oxygen in the air to make CO2. To a lesser extent, the clearing of land for agriculture, industry, and other human activities has increased concentrations of greenhouse gases.</br>
+
+					</br>THE ROLE OF HUMAN ACTIVITY</br>
+
+					</br>In its Fifth Assessment Report, the Intergovernmental Panel on Climate Change, a group of 1,300 independent scientific experts from countries all over the world under the auspices of the United Nations, concluded there's a more than 95 percent probability that human activities over the past 50 years have warmed our planet.</br>
+
+					</br>The industrial activities that our modern civilization depends upon have raised atmospheric carbon dioxide levels from 280 parts per million to 400 parts per million in the last 150 years. The panel also concluded there's a better than 95 percent probability that human-produced greenhouse gases such as carbon dioxide, methane and nitrous oxide have caused much of the observed increase in Earth's temperatures over the past 50 years</br>
 				</h3>      	
         </div>
 		
