--- a/evidence.html
+++ b/evidence.html
@@ -13,8 +13,8 @@
 		<div id="mySidenav" class="sidenav">
   		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   		<a href="index.html">Home</a>
-  		<a href="#">Causes</a>
-  		<a href="#">Solution</a>
+  		<a href="cause.html">Causes</a>
+  		<a href="solution.html">Solution</a>
 		</div>
 
 		<div class="w3-animate-fading">
