--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <div class="row">
     <div class="col-md-3 col-sm-3 col-xs-6"> <a href="evidence.html"
       class="btn btn-sm animated-button victoria-one">     Evidence     </a> </div>
-    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-two">Cause</a> </div>
-    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button victoria-four">Solution</a> </div>
+    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="cause.html" class="btn btn-sm animated-button victoria-two">Cause</a> </div>
+    <div class="col-md-3 col-sm-3 col-xs-6"> <a href="solution.html" class="btn btn-sm animated-button victoria-four">Solution</a> </div>
   </div>
   </div>
   
