--- a/solution.html
+++ b/solution.html
@@ -27,7 +27,62 @@
         <div class = "box-container">
         	<div class = "box-1">
         		<h3 style = "font-family:times new roman,times,serif;">
+        			</br>The enormity of global warming can be daunting and dispiriting. What can one person, or even one nation, do on their own to slow and reverse climate change? But just as ecologist Stephen Pacala and physicist Robert Socolow, both at Princeton University, came up with 15 so-called "wedges" for nations to utilize toward this goal—each of which is challenging but feasible and, in some combination, could reduce greenhouse gas emissions to safer levels—there are personal lifestyle changes that you can make too that, in some combination, can help reduce your carbon impact. Not all are right for everybody. Some you may already be doing or absolutely abhor. But implementing just a few of them could make a difference.</br>
 
+
+					</br>FOREGO FOSSIL FUELS</br>
+
+					</br>The first challenge is eliminating the burning of coal, oil and, eventually, natural gas. This is perhaps the most daunting challenge as denizens of richer nations literally eat, wear, work, play and even sleep on the products made from such fossilized sunshine. And citizens of developing nations want and arguably deserve the same comforts, which are largely thanks to the energy stored in such fuels.</br>
+
+					</br>INFRASTRUCTURE UPGRADE</br>
+
+					</br>Buildings worldwide contribute around one third of all greenhouse gas emissions (43 percent in the U.S. alone), even though investing in thicker insulation and other cost-effective, temperature-regulating steps can save money in the long run. Electric grids are at capacity or overloaded, but power demands continue to rise. And bad roads can lower the fuel economy of even the most efficient vehicle. Investing in new infrastructure, or radically upgrading existing highways and transmission lines, would help cut greenhouse gas emissions and drive economic growth in developing countries.</br>
+
+					</br>MOVE CLOSER TO WORK</br>
+
+					</br>Transportation is the second leading source of greenhouse gas emissions in the U.S. (burning a single gallon of gasoline produces 20 pounds of CO2). But it doesn't have to be that way.</br>
+
+					</br>One way to dramatically curtail transportation fuel needs is to move closer to work, use mass transit, or switch to walking, cycling or some other mode of transport that does not require anything other than human energy. There is also the option of working from home and telecommuting several days a week.</br>
+
+					</br>Cutting down on long-distance travel would also help, most notably airplane flights, which are one of the fastest growing sources of greenhouse gas emissions and a source that arguably releases such emissions in the worst possible spot (higher in the atmosphere). Flights are also one of the few sources of globe-warming pollution for which there isn't already a viable alternative: jets rely on kerosene, because it packs the most energy per pound, allowing them to travel far and fast, yet it takes roughly 10 gallons of oil to make one gallon of JetA fuel. Restricting flying to only critical, long-distance trips—in many parts of the world, trains can replace planes for short- to medium-distance trips—would help curb airplane emissions.</br>
+
+					</br>CONSUME LESS</br>
+
+					</br>The easiest way to cut back on greenhouse gas emissions is simply to buy less stuff. Whether by forgoing an automobile or employing a reusable grocery sack, cutting back on consumption results in fewer fossil fuels being burned to extract, produce and ship products around the globe.</br>
+
+					</br>Think green when making purchases. For instance, if you are in the market for a new car, buy one that will last the longest and have the least impact on the environment. Thus, a used vehicle with a hybrid engine offers superior fuel efficiency over the long haul while saving the environmental impact of new car manufacture.</br>
+
+					</br>BE EFFICIENT</br>
+
+					</br>A potentially simpler and even bigger impact can be made by doing more with less. Citizens of many developed countries are profligate wasters of energy, whether by speeding in a gas-guzzling sport-utility vehicle or leaving the lights on when not in a room.</br>
+
+					</br>Good driving and good car maintenance, such as making sure tires are properly inflated—can limit the amount of greenhouse gas emissions from a vehicle and, perhaps more importantly, lower the frequency of payment at the pump.</br>
+
+					</br>Similarly, employing more efficient refrigerators, air conditioners and other appliances, such as those rated highly under the U.S. Environmental Protection Agency's Energy Star program, can cut electric bills while something as simple as weatherproofing the windows of a home can reduce heating and cooling bills. Such efforts can also be usefully employed at work, whether that means installing more efficient turbines at the power plant or turning the lights off when you leave the office.</br>
+
+					</br>EAT SMART, GO VEGETARIAN?</br>
+
+					</br>Corn grown in the U.S. requires barrels of oil for the fertilizer to grow it and the diesel fuel to harvest and transport it. Some grocery stores stock organic produce that do not require such fertilizers, but it is often shipped from halfway across the globe. And meat, whether beef, chicken or pork, requires pounds of feed to produce a pound of protein.</br>
+
+					</br>STOP CUTTING DOWN TREES</br>
+
+					</br>Every year, 33 million acres of forests are cut down. Timber harvesting in the tropics alone contributes 1.5 billion metric tons of carbon to the atmosphere. That represents 20 percent of human-made greenhouse gas emissions and a source that could be avoided relatively easily.</br>
+
+					</br>UNPLUG</br>
+
+					</br>Believe it or not, U.S. citizens spend more money on electricity to power devices when off than when on. Televisions, stereo equipment, computers, battery chargers and a host of other gadgets and appliances consume more energy when seemingly switched off, so unplug them instead.</br>
+
+					</br>PURCHASING ENERGY</br>
+					
+					</br>Efficient gadgets can also save both energy and money—and thus prevent more greenhouse gas emissions. To take but one example, efficient battery chargers could save more than one billion kilowatt-hours of electricity—$100 million at today's electricity prices—and thus prevent the release of more than one million metric tons of greenhouse gases.</br>
+
+					</br>Swapping old incandescent lightbulbs for more efficient replacements, such as compact fluorescents (warning: these lightbulbs contain mercury and must be properly disposed of at the end of their long life), would save billions of kilowatt-hours. In fact, according to the EPA, replacing just one incandescent lightbulb in every American home would save enough energy to provide electricity to three million American homes.</br>
+
+					</br>ONE CHILD</br>
+
+					</br>There are at least 6.6 billion people living today, a number that is predicted by the United Nations to grow to at least nine billion by mid-century. The U.N. Environmental Program estimates that it requires 54 acres to sustain an average human being today—food, clothing and other resources extracted from the planet. Continuing such population growth seems unsustainable.</br>
+
+					</br>All may have unintended consequences, making the solution worse than the original problem. But it is clear that at least some form of geoengineering will likely be required: capturing carbon dioxide before it is released and storing it in some fashion, either deep beneath the earth, at the bottom of the ocean or in carbonate minerals. Such carbon capture and storage is critical to any serious effort to combat climate change.</br>
 				</h3>      	
         </div>
 
